# aws-handler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  realease_notes.md  requirements-dev.txt  requirements.txt
.github/workflows/: python-publish.yml
aws_handler/: __init__.py
aws_handler/aws_integration/: __init__.py
aws_handler/aws_integration/connectors/aws_connector/: __init__.py  aws_connector.py  mock.py  s3.py
aws_handler/aws_integration/connectors/boto3/: boto3_connector.py  util.py
aws_handler/s3_handler/: __init__.py  s3_handler.py
aws_handler/s3_handler/models/: __init__.py  file_url.py  file_url_collection.py
aws_handler/s3_handler/reader/: __init__.py  reader.py
aws_handler/s3_handler/writer/: __init__.py  writer.py
aws_handler/util/: logger.py  pandas.py
project_settings/git/: .pre-commit-config.yaml
src/aws_handler/aws_integration/connectors/aws_connector/: __init__.py  s3.py
src/aws_handler/aws_integration/connectors/boto3/: util.py
src/aws_handler/s3_handler/reader/: reader.py
tests/aws_connector/: test_aws_connector.py
tests/s3/: test_s3.py  test_s3_integration.py
